<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".views.LoginActivity">

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_movie"
                android:layout_width="102dp"
                android:layout_height="98dp"
                android:layout_marginBottom="72dp"
                android:alpha="0.7"
                android:src="@drawable/login_movies_image"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.578">

                <RelativeLayout
                    android:id="@+id/mobileNumEdtLayout"
                    android:layout_width="270dp"
                    android:layout_height="46dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/user_name_bg">

                    <TextView
                        android:id="@+id/userNameHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:fontFamily="@font/interbold"
                        android:text="@string/user_id"
                        android:textColor="@color/user"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/etUserName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="#00000000"
                        android:focusableInTouchMode="true"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textCursorDrawable="@null" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="270dp"
                    android:layout_height="46dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="32dp"
                    android:background="@drawable/user_name_bg">

                    <TextView
                        android:id="@+id/etPasswordHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:fontFamily="@font/interbold"
                        android:text="@string/password"
                        android:textColor="@color/user"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="#00000000"
                        android:focusableInTouchMode="true"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textCursorDrawable="@null" />

                    <ImageView
                        android:id="@+id/ivHidePassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/hide_password"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/ivShowPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/show_password" />
                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/btnLogin"
                android:layout_width="190dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:alpha="0.7"
                android:background="@drawable/login_button_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/interbold"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>