<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".views.PopularMovieActivity">

    <TextView
        android:id="@+id/tvPopular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/interbold"
        android:text="@string/popular"
        android:textColor="@color/user"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/tvPopular"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@color/colorPrimary"
        android:hint="@string/search"
        android:textCursorDrawable="@null"
        app:iconifiedByDefault="false"
        app:queryBackground="@null" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvItemPopular"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/searchBar"
        android:layout_marginTop="20dp"
        tools:listitem="@layout/popular_item" />

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>