<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="20dp"
    android:orientation="vertical"
    android:id="@+id/itemPopular"
    android:background="@color/colorPrimary"
    android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivPopularImage"
            android:src="@drawable/login_movies_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:progressTint="#FFFFFF"
            android:progressBackgroundTint="#8FFFFFFF"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:rating="2" />

        <TextView
            android:id="@+id/tvItemMovieName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/interbold"
            android:text="@string/user_id"
            android:layout_alignTop="@+id/ivPopularImage"
            android:layout_marginTop="10dp"
            android:textColor="@color/user"
            android:layout_marginStart="10dp"
            android:textSize="12sp" />


</RelativeLayout>